Bug 73436 - FILEOPEN Interaction on image (jump to slide #) lost on opening
Summary: FILEOPEN Interaction on image (jump to slide #) lost on opening
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: Other Linux (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0 target:4.2.0
Keywords: regression
: 73093 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-09 14:21 UTC by Cor Nouws
Modified: 2014-03-24 12:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
impress test with two slides and one interaction (175.52 KB, application/vnd.oasis.opendocument.presentation)
2014-01-09 14:23 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2014-01-09 14:21:49 UTC
Impress with Image on slide 1
  image is pixtel-image
  interaction to slide/object
  should cause jump to slide #2

Open in 4.1.x > interaction is there
Open in 4.2.0 beta1 > interaction is lost

Was still OK in 4.2.0 alpha1

will attach simple test document
Comment 1 Cor Nouws 2014-01-09 14:23:11 UTC
Created attachment 91750 [details]
impress test with two slides and one interaction

thanks to Barend for helping to find this one
Comment 2 Andras Timar 2014-01-10 20:56:23 UTC
commit f0a9ca24fd4bf79cac908bf0d6fdb8905dc504db by Stephan Bergmann caused this regression
Comment 3 Commit Notification 2014-01-13 13:28:22 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a675873cb2bad78a5da3e3b089bebf01ca60f898

fdo#73436 Let SdXImpressDocument handle css.drawing.* requests directly



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-01-13 13:29:44 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf0834724fa54c3fd718029505cc2865a3dd0149&h=libreoffice-4-2

fdo#73436 Let SdXImpressDocument handle css.drawing.* requests directly


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-01-14 13:48:23 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c1924d98974b93195bb7a4afd0a032bcaa990d0&h=libreoffice-4-2-0

fdo#73436 Let SdXImpressDocument handle css.drawing.* requests directly


It will be available already in LibreOffice 4.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Stephan Bergmann 2014-03-24 12:35:55 UTC
*** Bug 73093 has been marked as a duplicate of this bug. ***