fdo#73436 Let SdXImpressDocument handle css.drawing.* requests directly

...instead of handing off to base class, so that potential wrapping in SdXShape
(in create) is not skipped.

Change-Id: I57fb10ef478688a5a0c1c3c736efbd55a7172423